# habit_tracker

./: .env.sample  Dockerfile  README.md  data.json  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
tracker/: admin.py  models.py  paginators.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
tracker/migrations/: 0001_initial.py  0002_initial.py  0003_alter_way_reward.py  0004_remove_way_units_measurement_and_more.py
users/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_remove_user_username_user_avatar_user_country_and_more.py  0003_user_chat_id.py
